--- a/frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -6,6 +6,7 @@
     .tab-name {
         position: absolute;
         top: 50%;
+        left: -10px;
         color: white;
         font-size: 15px;
         font-weight: 600;
