--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -14,6 +14,8 @@
 @import "cmps/BoardFilter";
 @import "cmps/FilterModal";
 @import "cmps/BoardPreview";
+@import "cmps/ActivitiesModal";
+@import "cmps/ModalMsg";
 
 @import "cmps/GroupList";
 @import "cmps/GroupPreview";
