--- a/frontend/src/assets/styles/cmps/_groupPreview.scss
+++ b/frontend/src/assets/styles/cmps/_groupPreview.scss
@@ -4,6 +4,7 @@
 .group-preview {
     position: relative;
     padding-bottom: 45px;
+    padding: 10px;
     .group-header {
         height: 48px;
         padding: 0 8px;
