--- a/frontend/src/assets/styles/cmps/_ActivitiesModal.scss
+++ b/frontend/src/assets/styles/cmps/_ActivitiesModal.scss
@@ -13,6 +13,9 @@
     overflow: hidden;
     transform: translateX(10px);
     transition: transform 2s linear;
+    button {
+        cursor: pointer;
+    }
     .active-preview {
         border: 1px solid #d1d1d1;
         border-radius: 5px;
